2017-11-04 (0.12.10)
	COMMON: update png and editor libs

2017-10-28 (0.12.10)
	COMMON: optimise method call access

2017-10-27 (0.12.10)
	COMMON: removed experimental reference variable concept

2017-10-25 (0.12.10)
	COMMON: optimise byref let

2017-10-21 (0.12.10)
	COMMON: optimise array handling

2017-10-19 (0.12.10)
	COMMON: fix win32 run regression

2017-10-17 (0.12.10)
	COMMON: performance optimisations

2017-10-07 (0.12.10)
	COMMON: Fix var scope errors reported by cppcheck
	COMMON: dirwalk callback now provides properties path,name,depth,mtime,size,dir
	UI: shell now displays size and date columns

2017-09-30 (0.12.10)
	COMMON: Update var cache handling to use free-list

2017-09-23 (0.12.10)
	ANDROID: Fix crash when displaying an alert with extended ascii chars
	ANDROID: Fix forward scolling issue

2017-09-22 (0.12.10)
	SDL: Fix cursor error position when running from selected text

2017-09-09 (0.12.10)
	SDL: Moved "Live edit" mode to editor via F8 key

2017-09-06 (0.12.10)
	COMMON: fix handling for code array passed as function argument

2017-09-03 (0.12.10)
	COMMON: code cleanup, remove obsolete global options

2017-08-31 (0.12.10)
	COMMON: fix issue when LOCAL used inside while loop

2017-08-25 (0.12.10)
	COMMON: raise error when FUNC return value not assigned

2017-08-13 (0.12.10)
	SDL: Added F8 publish command

2017-08-08 (0.12.10)
	COMMON: Fix PROGLINE when using multi-line strings

2017-08-08 (0.12.10)
	COMMON: LEFT, RIGHT, REPLACE, INSTR, RINSTR no longer error on invalid pos input

2017-07-29 (0.12.10)
	COMMON: VAL command now ignored any input trailing non digit chars
	COMMON: MID command now returns blank for invalid index input

2017-07-13 (0.12.10)
	COMMON: Fix potential infinite loop using the MAX command

2017-06-08 (0.12.10)
	COMMON: Now errors when using a keyword as part of a MAP variable

2017-06-08 (0.12.10)
	COMMON: Fix issue with INPUT command

2017-06-05 (0.12.10)
	ANDROID: Fix exit when navigating to non-permitted path
