@@ -41,6 +41,9 @@ static const char *ENV_VARS[] = {
 
 String recentPath[NUM_RECENT_ITEMS];
 int recentPosition[NUM_RECENT_ITEMS];
+extern String g_exportAddr;
+extern String g_exportToken;
+enum Settings {k_window, k_debug, k_export};
 
 void createConfigPath(const char *var, const char *home, char *path) {
   strcpy(path, home);
@@ -53,19 +56,26 @@ void createConfigPath(const char *var, const char *home, char *path) {
   makedir(path);
 }
 
-FILE *openConfig(const char *flags, bool debug) {
+FILE *openConfig(bool readMode, Settings settings) {
   FILE *result = NULL;
   char path[FILENAME_MAX];
+  const char *flags = readMode ? "rb" : "wb";
 
   path[0] = 0;
   for (int i = 0; ENV_VARS[i][0] != '\0' && result == NULL; i++) {
     const char *home = getenv(ENV_VARS[i]);
     if (home && access(home, R_OK) == 0) {
       createConfigPath(ENV_VARS[i], home, path);
-      if (debug) {
-        strcat(path, "/settings_debug.txt");
-      } else {
+      switch (settings) {
+      case k_debug:
+        strcat(path, "/debug.txt");
+        break;
+      case k_window:
         strcat(path, "/settings.txt");
+        break;
+      case k_export:
+        strcat(path, "/export.txt");
+        break;
       }
       result = fopen(path, flags);
     }
@@ -147,7 +157,7 @@ void restorePath(FILE *fp, bool restoreDir) {
 // restore window position
 //
 void restoreSettings(SDL_Rect &rect, int &fontScale, bool debug, bool restoreDir) {
-  FILE *fp = openConfig("rb", debug);
+  FILE *fp = openConfig(true, debug ? k_debug : k_window);
   if (fp) {
     rect.x = nextInteger(fp, SDL_WINDOWPOS_UNDEFINED);
     rect.y = nextInteger(fp, SDL_WINDOWPOS_UNDEFINED);
@@ -183,13 +193,31 @@ void restoreSettings(SDL_Rect &rect, int &fontScale, bool debug, bool restoreDir
     opt_ide = IDE_INTERNAL;
     g_themeId = 0;
   }
+
+  // restore export settings
+  if (!debug) {
+    fp = openConfig(true, k_export);
+    if (fp) {
+      int len = nextString(fp);
+      if (len > 1) {
+        g_exportAddr.clear();
+        g_exportAddr.append(fp, len);
+      }
+      len = nextString(fp);
+      if (len > 1) {
+        g_exportToken.clear();
+        g_exportToken.append(fp, len);
+      }
+      fclose(fp);
+    }
+  }
 }
 
 //
 // save the window position
 //
 void saveSettings(SDL_Window *window, int fontScale, bool debug) {
-  FILE *fp = openConfig("wb", debug);
+  FILE *fp = openConfig(false, debug ? k_debug : k_window);
   if (fp) {
     int x, y, w, h;
     SDL_GetWindowPosition(window, &x, &y);
@@ -220,8 +248,21 @@ void saveSettings(SDL_Window *window, int fontScale, bool debug) {
         fprintf(fp, "%s\n", recentPath[i].c_str());
       }
     }
-
     fclose(fp);
+  }
+
+  // save export settings
+  if (!debug) {
+    fp = openConfig(false, k_export);
+    if (fp) {
+      if (!g_exportAddr.empty()) {
+        fprintf(fp, "%s\n", g_exportAddr.c_str());
+      }
+      if (!g_exportToken.empty()) {
+        fprintf(fp, "%s\n", g_exportToken.c_str());
+      }
+      fclose(fp);
+    }
   }
 }
 
