@@ -1,5 +1,6 @@
 2017-11-04 (0.12.10)
 	COMMON: update png and editor libs
+	UI: save and restore export settings
 
 2017-10-28 (0.12.10)
 	COMMON: optimise method call access
